[gd_scene load_steps=2 format=2]

[ext_resource path="res://Networking/Client.gd" type="Script" id=1]

[node name="Client" type="Node"]
script = ExtResource( 1 )

[node name="Gui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_button" type="Button" parent="Gui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -67.5
margin_right = 126.5
margin_bottom = 67.5
disabled = true
text = "Connecting..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Gui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -119.0
margin_right = 110.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.084
margin_top = -117.001
margin_right = 200.916
margin_bottom = 178.999
dialog_text = "Can't connect to server."

[node name="Try_to_connect_to_server_timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="pressed" from="Gui/Start_button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Try_to_connect_to_server_timer" to="." method="_on_Try_to_connect_to_server_timer_timeout"]
